--- a/res/xml/liquid_settings.xml
+++ b/res/xml/liquid_settings.xml
@@ -121,7 +121,17 @@
         android:icon="@drawable/ic_settings_statusbar"
         android:fragment="com.liquid.liquidlounge.fragments.StatusBarSettings" />
      
-     <!-- About LiquidRemix -->
+    <!-- Advanced Controls -->
+    <Preference
+        	android:key="advanced_controls"
+        	android:persistent="false"
+        	android:title="@string/advanced_controls_title">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.thht.settings.device"
+            android:targetClass="com.thht.settings.device.DeviceSettings"/>
+    	</Preference>
+
+    <!-- About LiquidRemix -->
     <Preference
         android:key="about_category"
         android:title="@string/about_title"
