--- a/res/xml/liquid_settings.xml
+++ b/res/xml/liquid_settings.xml
@@ -123,9 +123,10 @@
      
     <!-- Advanced Controls -->
     <Preference
-        	android:key="advanced_controls"
-        	android:persistent="false"
-        	android:title="@string/advanced_controls_title">
+        android:key="advanced_controls"
+        android:persistent="false"
+        android:title="@string/advanced_controls_title"
+        android:icon="@drawable/ic_settings_misc">
         <intent android:action="android.intent.action.MAIN"
             android:targetPackage="com.thht.settings.device"
             android:targetClass="com.thht.settings.device.DeviceSettings"/>
