--- a/res/values/liquid_devices.xml
+++ b/res/values/liquid_devices.xml
@@ -94,6 +94,6 @@
 
     <!-- XIAOMI -->
     <string name="device_xiaomi_kenzo">Redmi Note 3 Pro</string>
-    <string name="device_xiaomi_kenzo_summary">Kenzo\nMaintainer - Haresh Bhankhodiya (l0rd_vader)</string>	
+    <string name="device_xiaomi_kenzo_summary">Kenzo\nMaintainer - Kyryll Bondarenko (Magicxavi)</string>	
 
 </resources>
