--- a/res/values/liquid_arrays.xml
+++ b/res/values/liquid_arrays.xml
@@ -1169,7 +1169,8 @@
         <item>@string/lockscreen_date_selection_str_gradient</item>
         <item>@string/lockscreen_date_selection_str_border_accent</item>
         <item>@string/lockscreen_date_selection_str_border_gradient</item>
-    </string-array>
+        <item>@string/lockscreen_date_selection_str_half_gradient</item>
+        <item>@string/lockscreen_date_selection_str_half_accent</item>
 
     <string-array name="lockscreen_date_selection_values" translatable="false">
         <item>0</item>
@@ -1183,6 +1184,8 @@
         <item>8</item>
         <item>9</item>
         <item>10</item>
+        <item>11</item>
+        <item>12</item>
     </string-array>
 
 </resources>
