--- a/res/values/liquid_strings.xml
+++ b/res/values/liquid_strings.xml
@@ -1372,16 +1372,18 @@
     <!-- Lockscreen Date styles -->
     <string name="lockscreen_date_selection_title">Date style</string>
     <string name="lockscreen_date_selection_default">Default</string>
-    <string name="lockscreen_date_selection_str_box">Semi-transparent box</string>
-    <string name="lockscreen_date_selection_str_round">Semi-transparent box (round)</string>
-    <string name="lockscreen_date_selection_qbeta_style">Q Beta pill</string>
-    <string name="lockscreen_date_selection_str_accent">Rounded, simple and with accent</string>
-    <string name="lockscreen_date_selection_str_accent_day">Rounded, simple and with accent (alt)</string>
-    <string name="lockscreen_date_selection_str_accent_transparent">Rounded, transparent and with accent</string>
-    <string name="lockscreen_date_selection_str_accent_transparent_day">Rounded, transparent and with accent (alt)</string>
+    <string name="lockscreen_date_selection_str_box">Semi-Transparent (Box)</string>
+    <string name="lockscreen_date_selection_str_round">Semi-Transparent</string>
+    <string name="lockscreen_date_selection_qbeta_style">Android Q</string>
+    <string name="lockscreen_date_selection_str_accent">Accent</string>
+    <string name="lockscreen_date_selection_str_accent_day">Accent (Alt)</string>
+    <string name="lockscreen_date_selection_str_accent_transparent">Accent (Transparent)</string>
+    <string name="lockscreen_date_selection_str_accent_transparent_day">Accent (Transparent - Alt)</string>
     <string name="lockscreen_date_selection_str_gradient">Gradient</string>
-    <string name="lockscreen_date_selection_str_border_accent">Dark with accented borders</string>
-    <string name="lockscreen_date_selection_str_border_gradient">Dark with gradient borders</string>
+    <string name="lockscreen_date_selection_str_border_accent">Accent (Borders)</string>
+    <string name="lockscreen_date_selection_str_border_gradient">Gradient (Borders)</string>
+    <string name="lockscreen_date_selection_str_half_gradient">Gradient (Transparent ending)</string>
+    <string name="lockscreen_date_selection_str_half_accent">Accent (Transparent ending)</string>
 
     <!-- Advanced Controls -->
     <string name="advanced_controls_title">Advanced Controls</string>
