--- a/res/values/liquid_arrays.xml
+++ b/res/values/liquid_arrays.xml
@@ -1171,6 +1171,7 @@
         <item>@string/lockscreen_date_selection_str_border_gradient</item>
         <item>@string/lockscreen_date_selection_str_half_gradient</item>
         <item>@string/lockscreen_date_selection_str_half_accent</item>
+		</string-array>
 
     <string-array name="lockscreen_date_selection_values" translatable="false">
         <item>0</item>
